--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -181,7 +181,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -211,7 +211,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -320,7 +320,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -342,7 +342,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -391,10 +391,27 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- 
-<div class="container py-5">
+ <div class="container py-5">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/cylinderical-cell-tester-main.png" alt="Prismatic Cell Testers" title="Prismatic Cell Testers" class="w-100 mb-3">
+    </div>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>Available Models</strong></h2> <br>
+        <table>
+  <tr><th>No.</th><th>Model</th><th>Channels</th></tr>
+  <tr><td>1</td><td>5V 30A 16CH</td><td>8/16/32/64/128</td></tr>
+  <tr><td>2</td><td>5V 60A 8CH</td><td>8/16/32/64</td></tr>
+  <tr><td>3</td><td>5V 100A 16CH</td><td>16/32/40/48</td></tr>
+  <tr><td>4</td><td>5V 200A 8CH</td><td>8/16/32</td></tr>
+  <tr><td>5</td><td>5V 300A 16CH</td><td>4/8/16</td></tr>
+
+</table>
+    </div>
+</div>
+</div> 
+<!--<div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 30A in India"><img src="img/5v-30a.png" class="card-img-top product-img" alt="5V 30A in India" title="5V 30A in India"></a>
@@ -409,7 +426,6 @@
       </div>
     </div>
 
-    <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 60A in India"><img src="img/5v-60a.png" class="card-img-top product-img" alt="5V 60A in India" title="5V 60A in India"></a>
@@ -437,11 +453,10 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
-<div class="container py-5">
+<!--<div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 200A in India"><img src="img/5v-200a.png" class="card-img-top product-img" alt="5V 200A in India" title="5V 200A in India"></a>
@@ -456,7 +471,6 @@
       </div>
     </div>
 
-    <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 300A in India"><img src="img/5v-300a.png" class="card-img-top product-img" alt="5V 300A in India" title="5V 300A in India"></a>
@@ -471,7 +485,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
   <!-- Footer -->
 <footer class="py-4">
