--- a/cell-testers.html
+++ b/cell-testers.html
@@ -175,7 +175,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -205,7 +205,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -314,7 +314,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -336,7 +336,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -385,10 +385,30 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- 
-<div class="container py-5">
+ <div class="container py-5">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/cylinderical-cell-tester-main.png" alt="Cell Testers" title="Cell Testers" class="w-100 mb-3">
+    </div>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>Available Models</strong></h2> <br>
+        <table>
+  <tr><th>No.</th><th>Model</th><th>Add on Feature</th></tr>
+  <tr><td>1</td><td>5V 3A 512CH</td><td>Energy Saving</td></tr>
+  <tr><td>2</td><td>5V 6A 512CH</td><td>Energy Saving</td></tr>
+  <tr><td>3</td><td>5V 10A 512CH</td><td>Energy Saving</td></tr>
+    <tr><td>4</td><td>5V 10A 256CH</td><td>Energy Saving</td></tr>
+  <tr><td>5</td><td>5V 20A 256CH</td><td>Energy Saving</td></tr>
+  <tr><td>6</td><td>5V 30A 256CH</td><td>Energy Saving</td></tr>
+  <tr><td>7</td><td>5V 6A 80CH</td><td>With temperature sensor</td></tr>
+  <tr><td>8</td><td>5V 20A 8CH</td><td>Neware</td></tr>
+</table>
+    </div>
+</div>
+</div>
+<!--<div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
+   
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 3A 512CH in India"><img src="img/5v-3a-512.png" class="card-img-top product-img" alt="5V 3A 512CH in India" title="5V 3A 512CH in India"></a>
@@ -403,7 +423,6 @@
       </div>
     </div>
 
-    <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 6A 512CH in India"><img src="img/5v-6a-512.png" class="card-img-top product-img" alt="5V 6A 512CH in India" title="5V 6A 512CH in India"></a>
@@ -423,7 +442,7 @@
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">5V 10A 512/256CH</h5>
-            <!--<p class="card-text text-muted">Complete BESS Container Assembly Lines for energy storage solutions, enabling automated integration of battery packs, cooling, fire safety, and control systems. Designed for utility, C&I, and renewable energy applications.</p>-->
+            
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -436,7 +455,7 @@
 
 <div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
+    
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 20A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 20A 256CH in India" title="5V 20A 256CH in India"></a>
@@ -451,7 +470,7 @@
       </div>
     </div>
 
-    <!-- Card 2 -->
+
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 30A 256CH in India"><img src="img/5v-20a-512.png" class="card-img-top product-img" alt="5V 30A 256CH in India" title="5V 30A 256CH in India"></a>
@@ -482,7 +501,7 @@
 </div>
   <div class="container py-5">
   <div class="row g-4">
-    <!-- Card 1 -->
+
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
         <a href="#" title="5V 20A 8CH in India"><img src="img/5V-20A-8CH.png" class="card-img-top product-img" alt="5V 20A 8CH in India" title="5V 20A 8CH in India"></a>
@@ -497,7 +516,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
   <!-- Footer --> 
 <footer class="py-4">
 <div class="container">
