--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -202,7 +202,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -311,7 +311,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -333,7 +333,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
