--- a/automatic-lines.html
+++ b/automatic-lines.html
@@ -173,7 +173,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -203,7 +203,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -312,7 +312,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -334,7 +334,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -385,13 +385,61 @@
 <!-- About Us -->
  
 <div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-4">
-        <img src="img/automatic-assembly-line.png" alt="Automatic Lines in India" title="Automatic Lines in India" class="w-100">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12">
+        <img src="img/auto-matic.png" alt="Automatic Line in India" title="Automatic Line in India" class="w-100">
     </div>
-    <div class="product-description col-lg-8">
-        <h2><strong>Automatic Lines</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>Automatic Line</strong></h2> <br>
+        <p>This image represents an advanced AGV (Automated Guided Vehicle) line designed for high-efficiency battery pack production. The fully automated line integrates precision robotics and smart conveying systems to ensure continuous, synchronized operations with an impressive cycle time of 15 packs per minute (ppm). The system spans approximately 95 meters in length, 15 meters in width, and 4 meters in height, with adjustable configurations to suit various production requirements. Operating at a total power of 280 kW, this AGV-based line optimizes material handling, enhances production accuracy, and minimizes manual intervention—making it ideal for large-scale, high-speed lithium battery pack assembly.</p>
+    </div>
+</div>
+</div>
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-description application-sec col-lg-7 pr-4">
+        <h2><strong>Cell Treatment Line Overview</strong></h2> <br>
+       <ul>
+        <li><strong>Production line size:</strong> 20m*8m*3m</li>
+        <li><strong>Cell segment power:</strong> 100kW</li>
+        <li><strong>Cell segment gas consumption:</strong> 1200L/min (Compressed air)</li>
+        <li><strong>Cell segment waste discharge:</strong> 1000m³/h (small particle, carbon dioxide, ozone and others)</li>
+       </ul>
+    </div>
+     <div class="products-image col-lg-5">
+        <img src="img/auto-matic-2.png" alt="Automatic Line" title="Automatic Line" class="w-100">
+    </div>
+</div>
+</div>
+<div class="container py-3">
+<div class="product col-lg-12">
+   <div class="products-image col-lg-5">
+        <img src="img/auto-matic-3.png" alt="Automatic Line" title="Automatic Line" class="w-100">
+    </div>
+    <div class="product-description application-sec col-lg-7 pr-4">
+        <h2><strong>Module Line Overview</strong></h2> <br>
+       <ul>
+        <li><strong>Production line size:</strong> 35m*6.5m*3.5m</li>
+        <li><strong>Module segment power:</strong> 100kW</li>
+        <li><strong>Module segment gas consumption:</strong> 1700L/min (compressed air) ; 100L/min (Nitrogen, Purity 99.99%)</li>
+        <li><strong>Module segment waste discharge:</strong> 2200m³/h(Small particle and others)</li>
+       </ul>
+    </div>
+</div>
+</div>
+<div class="container py-4">
+<div class="product col-lg-12">
+    <div class="product-description application-sec col-lg-7 pr-4">
+        <h2><strong>Pack Line Overview</strong></h2> <br>
+       <ul>
+        <li><strong>Production line size:</strong> 54m*7.2m*4m</li>
+        <li><strong>Pack segment power:</strong> 80kW</li>
+        <li><strong>Pack segment gas consumption:</strong> 500L/min(Compressed air) ; 100L/min (N2, Purity 99.99%)</li>
+        <li><strong>Pack segment waste discharge:</strong> 1000m³/h (Glue gas and others)</li>
+       </ul>
+    </div>
+     <div class="products-image col-lg-5">
+        <img src="img/auto-matic-4.png" alt="Automatic Line" title="Automatic Line" class="w-100">
     </div>
 </div>
 </div>
