--- a/belt-separator.html
+++ b/belt-separator.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Battery Seperator for Lithium Cell Lines | Indygreen Technologies</title>
+<title>Battery Separator for Lithium Cell Lines | Indygreen Technologies</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies supplies high-quality belt separators for lithium Cell Lines — ensuring precise separation, safety, and performance for cylindrical, prismatic, and pouch cells." />
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/belt-separator.html" />
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Battery Seperator for Lithium Cell Lines | Indygreen Technologies" />
+<meta property="og:title" content="Battery Separator for Lithium Cell Lines | Indygreen Technologies" />
 <meta property="og:description" content="Premium belt separators for lithium battery production — designed for accurate cell separation, enhanced safety, and optimal performance in all battery types." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.indygreentech.com/belt-separator.html" />
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Battery Seperator for Lithium Cell Lines | Indygreen Technologies" />
+<meta name="twitter:title" content="Battery Separator for Lithium Cell Lines | Indygreen Technologies" />
 <meta name="twitter:description" content="High-quality belt separators for lithium Cell Lines — ensuring safety, performance, and precise separation for cylindrical, prismatic, and pouch cells." />
 <meta name="twitter:image" content="https://www.indygreentech.com/images/belt-separator.png" />
 <meta name="twitter:site" content="@IndygreenTech" />
@@ -175,7 +175,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -205,7 +205,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -314,7 +314,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -336,7 +336,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -365,7 +365,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Battery Seperator</h1>
+<h1 class="title text-white">Battery Separator</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -374,7 +374,7 @@
 <span class="ttm-bread-sep text-white">/</span>
 <a title="Lithium Cell Lines" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Battery Seperator</span>
+<span class="text-white">Battery Separator</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -386,10 +386,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/DEMO.png" alt="Battery Seperator in India" title="Battery Seperator in India" class="w-100">
+        <img src="img/DEMO.png" alt="Battery Separator in India" title="Battery Separator in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Battery Seperator</strong></h2>
+        <h2><strong>Battery Separator</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
