--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -173,7 +173,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -203,7 +203,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -312,7 +312,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -334,7 +334,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -380,14 +380,24 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- 
+ <div class="container py-5">
+<div class="product col-lg-12 flex-column">
+    <div class="product-description col-lg-12 bess">
+        <img src="img/bess-container-main.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
+    </div>
+    <div class="product-description col-lg-12 pt-5">
+        <h2><strong>BESS Container Assembly Lines</strong></h2> <br>
+        <p>The BESS (Battery Energy Storage System) container assembly line is an advanced automated production system designed for efficient and precise assembly of large-scale energy storage containers. It integrates processes such as module installation, busbar connection, wiring, cooling system integration, and final container assembly within a streamlined workflow. Utilizing robotic handling, smart inspection, and automated fastening systems, it ensures high productivity, safety, and consistency in every unit. The line’s modular and scalable design allows easy customization for various container capacities and configurations, making it ideal for manufacturing grid-scale and commercial energy storage solutions supporting renewable energy and power stabilization.</p>
+    </div>
+</div>
+</div>
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-description col-lg-8">
         <h2><strong>1. Automatic BESS Container Lines</strong></h2> <br>
         <img src="img/automatic-bess-line.png" alt="Automatic BESS Container Lines" title="Automatic BESS Container Lines" class="w-100 mb-3">
     </div>
-    <div class="product-description col-lg-4">
+    <div class="product-description col-lg-4 pt-5">
         <ul>
           <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
           <li>Container Transfer Method: Heavy load AGV Auto Transportation</li>
@@ -404,7 +414,7 @@
         <h2><strong>2. Manual BESS Container Lines</strong></h2> <br>
         <img src="img/manual-bess-line.png" alt="Manual BESS Container Lines" title="Manual BESS Container Lines" class="w-100 mb-3">
     </div>
-    <div class="product-description col-lg-4">
+    <div class="product-description col-lg-4 pt-5">
         <ul>
           <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
           <li>Container Transfer Method: Heavy load AGV Auto Transportation/ RGV/ Electric Flatcar/ Straddle</li>
