--- a/lithium-battery-raw-material.html
+++ b/lithium-battery-raw-material.html
@@ -174,7 +174,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
-<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -204,7 +204,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -309,7 +309,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
-<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
+
 </ul>
 </li>
 <li>
@@ -330,7 +330,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
+<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -412,20 +412,6 @@
       </div>
     </div>
     <!-- Card 3 -->
-     <div class="col-md-4 d-flex">
-      <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="LIB Seperator Film in India"><img src="img/lib-seperator-film.png" class="card-img-top product-img" alt="LIB Seperator Film in India" title="LIB Seperator Film in India"></a>
-        <div class="card-body d-flex flex-column justify-content-between">
-          <div>
-            <h5 class="card-title">LIB Seperator Film</h5>
-            <p class="card-text text-muted">High-performance lithium-ion battery separator ensuring excellent ion conductivity, thermal stability, and superior safety for efficient energy storage.</p>
-          </div>
-          <div class="mt-3 d-flex justify-content-center">
-            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
