--- a/cell-testers-for-prismatic.html
+++ b/cell-testers-for-prismatic.html
@@ -394,7 +394,7 @@
  <div class="container py-5">
 <div class="product col-lg-12 flex-column">
     <div class="product-description col-lg-12 bess">
-        <img src="img/cylinderical-cell-tester-main.png" alt="Prismatic Cell Testers" title="Prismatic Cell Testers" class="w-100 mb-3">
+        <img src="img/prismatic-cell-test.png" alt="Prismatic Cell Testers" title="Prismatic Cell Testers" class="w-100 mb-3">
     </div>
     <div class="product-description col-lg-12 pt-5">
         <h2><strong>Available Models</strong></h2> <br>
