--- a/other-machines.html
+++ b/other-machines.html
@@ -392,7 +392,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Automatic Pasting Machine in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Automatic Pasting Machine in India" title="Automatic Pasting Machine in India"></a>
+        <a href="#" title="Automatic Pasting Machine in India"><img src="img/automatic-pasting-machine.png" class="card-img-top product-img" alt="Automatic Pasting Machine in India" title="Automatic Pasting Machine in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Automatic Pasting Machine</h5>
@@ -407,7 +407,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Conveyor Belt in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Conveyor Belt in India" title="Conveyor Belt in India"></a>
+        <a href="#" title="Conveyor Belt in India"><img src="img/coveyer-belt.png" class="card-img-top product-img" alt="Conveyor Belt in India" title="Conveyor Belt in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Conveyor Belt <br>(4m and 10m)</h5>
@@ -421,7 +421,7 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS Tester in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
+        <a href="#" title="BMS Tester in India"><img src="img/bms-tester.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">BMS Tester</h5>
@@ -440,7 +440,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sleeve Cutter and Wire Cutter in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Sleeve Cutter and Wire Cutter in India" title="Sleeve Cutter and Wire Cutter in India"></a>
+        <a href="#" title="Sleeve Cutter and Wire Cutter in India"><img src="img/sleeve-cutter.png" class="card-img-top product-img" alt="Sleeve Cutter and Wire Cutter in India" title="Sleeve Cutter and Wire Cutter in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Sleeve Cutter and Wire Cutter</h5>
