--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -204,7 +204,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -391,7 +391,7 @@
         <img src="img/semi-2.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Semi Auto Lines</strong></h2> <br> <br>
+        <h2><strong>Semi Auto Lines</strong></h2> <br>
        <p>Indygreen Technology offers advanced Semi-Automatic Lines for Prismatic Battery Pack Solutions, engineered to provide the perfect balance between automation efficiency, precision control, and operational flexibility. These lines are thoughtfully designed to meet the evolving needs of modern lithium battery manufacturing, offering a seamless blend of technology and human oversight.</p> <br>
        <p>Our semi-automatic systems integrate high-precision equipment for cell testing, laser welding, module assembly, and BMS integration—ensuring every battery pack is produced with superior quality, consistency, and reliability. By minimizing manual intervention, these lines help reduce human error while maintaining the adaptability required for customized production demands.</p>
     </div>
@@ -400,7 +400,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-description col-lg-8 pr-4">
-        <h2><strong>Layout</strong></h2> <br> <br>
+        <h2><strong>Layout</strong></h2> <br> 
        <p>The layout consists of two main lines — the Module Line and the Pack Line — as shown in the layout. The Module Line has a total length of 24,220 mm, while the Pack Line extends to 27,816 mm, ensuring smooth and continuous manufacturing flow. A transfer crane is strategically placed between these two lines to efficiently transfer battery packs from the module section to the pack section.</p> <br>
        <p>The line incorporates a Module Section (1200 × 800 mm) and a Pack Section (1900 × 1000 mm), designed for optimal space utilization and seamless integration. By combining advanced automation with skilled human operation, this setup ensures consistent quality, reduced cycle time, and enhanced productivity</p>
     </div>
