--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -207,7 +207,7 @@
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
 <li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
-<li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+<li class="nav-item mr-0"><a href="casing.html" title="LIB Cell Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Cell Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -338,7 +338,7 @@
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
 <li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
-<li><a href="casing.html" title="Casing">Casing</a></li>
+<li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -459,11 +459,11 @@
     <!-- Card 2 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="casing.html" title="Casing in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Casing in India" title="Casing in India"></a>
+        <a href="casing.html" title="LIB Cell Casing in India"><img src="img/lib-cell-casing.png" class="card-img-top product-img" alt="LIB Cell Casing in India" title="LIB Cell Casing in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Casing</h5>
-            <p class="card-text text-muted">Durable and high-quality Battery Casings for lithium-ion cells, providing protection, safety, and structural integrity for various consumer battery applications.</p>
+            <h5 class="card-title">LIB Cell Casing</h5>
+            <p class="card-text text-muted">Durable and high-quality LIB Cell Casings for lithium-ion cells, providing protection, safety, and structural integrity for various consumer battery applications.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
