--- a/sitemap.html
+++ b/sitemap.html
@@ -209,7 +209,7 @@
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
 <li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
-<li><a href="casing.html" title="Casing">Casing</a></li>
+<li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
 </ul>
