--- a/solder-wire-and-colar-flux.html
+++ b/solder-wire-and-colar-flux.html
@@ -211,7 +211,7 @@
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
 <li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
-<li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+<li class="nav-item mr-0"><a href="casing.html" title="LIB Cell Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Cell Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -342,7 +342,7 @@
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
 <li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
-<li><a href="casing.html" title="Casing">Casing</a></li>
+<li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
 </ul>
