--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -332,10 +332,10 @@
 <li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
-<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
-<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="LIB Battery Separator">LIB Battery Separator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
