--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
 </li>
 <li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
-<li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
-<li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="#" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="LIB Cell Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Cell Casing</a></li>
 </ul>
 </li>
@@ -331,10 +331,10 @@
 <li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="#" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
-<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
-<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="LIB Battery Separator">LIB Battery Separator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
