--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -203,10 +203,10 @@
 </li>
 <li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
-<li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
-<li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="#" title="LIB Battery Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Battery Separator</a></li>
+<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="LIB Cell Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Cell Casing</a></li>
 </ul>
 </li>
@@ -334,10 +334,10 @@
 <li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
-<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="LIB Battery Separator">LIB Battery Separator</a></li>
-<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="#" title="Copper Foil">Copper Foil</a></li>
+<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="#" title="LIB Battery Separator">LIB Battery Separator</a></li>
+<li><a href="#" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="LIB Cell Casing">LIB Cell Casing</a></li>
 </ul>
 </li>
@@ -389,15 +389,14 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="copper-foil.html" title="Copper Foil in India"><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
+        <a href="#" title="Copper Foil in India"><img src="img/copper-foil.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
             <p class="card-text text-muted">High-quality Copper Foil for lithium-ion batteries, offering excellent conductivity, durability, and uniform thickness. Ideal for anode current collectors in for various consumer batteries.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="copper-foil.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -405,15 +404,14 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="aluminum-foil.html" title="Aluminum Foil in India"><img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
+        <a href="#" title="Aluminum Foil in India"><img src="img/aluminum-foil.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
             <p class="card-text text-muted">Premium Aluminum Foil for lithium-ion batteries, providing superior conductivity, corrosion resistance, and uniform thickness. Perfect for cathode current collectors in various consumer applications.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="aluminum-foil.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
@@ -449,9 +447,8 @@
             <h5 class="card-title">Electrolyte</h5>
             <p class="card-text text-muted">High-performance Electrolytes for lithium-ion batteries, ensuring optimal ionic conductivity, stability, and safety. Designed for EVs, energy storage systems, and consumer electronics.</p>
           </div>
-          <div class="mt-3 d-flex justify-content-between">
-            <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="electrolyte.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
       </div>
