--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -441,7 +441,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="electrolyte.html" title="Electrolyte in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
+        <a href="electrolyte.html" title="Electrolyte in India"><img src="img/electrolute.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Electrolyte</h5>
